# server_sent_events

./: .gitignore  README.md
backend/: api.py  main.py  pyproject.toml
backend/models/: events.py
backend/routers/: openai.py  openai_sdk.py  sse.py
backend/services/: events.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/pages/openai_stream/: page.tsx
frontend/src/app/pages/openai_stream_sdk/: page.tsx
frontend/src/app/pages/simple_stream/: page.tsx
frontend/src/components/types/: ChatChunk.ts  EventMessage.ts
