[project]
name = "backend"
version = "0.1.0"
description = "Server-Sent Events (SSE) with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "httplib2>=0.22.0",
    "httpx[http2]>=0.28.1",
    "openai>=1.61.1",
    "sse-starlette>=2.2.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
